# creepscore

./: .gitignore  Dockerfile  LICENSE  README.md  app.js  index.html  package.json  pyproject.toml
augur/: __init__.py  api.py  artifacts.py  cli.py  config.py  data.py  evaluate.py  export.py  infer.py  model.py  train.py  viz.py
augur/static/: index.html
samples/: apple.txt  apple_tos.txt  atlassian_priv.txt  cloudflare_priv.txt  cloudflare_tos.txt  discord_priv.txt  discord_tos.txt  dropbox_priv.txt  dropbox_tos.txt  duckduckgo.txt  ea_priv.txt  ea_tos.txt  ebay_priv.txt  ebay_tos.txt  figma_priv.txt  figma_tos.txt  github_priv.txt  github_tos.txt  gitlab_priv.txt  google.txt  google_tos.txt  hubspot_priv.txt  ibm_priv.txt  linkedin_priv.txt  lyft_priv.txt  manifest.json  microsoft_priv.txt  microsoft_tos.txt  mozilla_priv.txt  netflix_priv.txt  nintendo_priv.txt  nvidia_priv.txt  oracle_priv.txt  paypal_priv.txt  paypal_tos.txt  proton.txt  robinhood_priv.txt  salesforce_priv.txt  salesforce_tos.txt  samsung_priv.txt  (+25 more)
scripts/: demo.ps1  demo.sh
src/: analyzer.js  semantic.js
test/: analyzer.test.js  run.mjs  semantic.test.js
tests/: conftest.py  test_onnx_and_api.py  test_pipeline.py
tools/: genmanifest.mjs
