[project]
name = "augur"
version = "0.1.0"
description = "Uncertainty-aware financial time-series forecasting with a production MLOps pipeline (PyTorch -> ONNX -> FastAPI)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Amr Alomari", email = "alomariaous74@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "onnxruntime>=1.17",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
augur = "augur.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["augur*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
